<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Destinations</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world! We are testing a push from Eclipse.</string>
    <string name="add_destination">Add Destination</string>
    <string name="update_destination">Update Destination</string>
    <string name="add_destination_menu">+</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zip Code</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="confirm_delete">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add_destination_failure">Could not add destination.</string>
    <string name="update_destination_failure">Could not update destination.</string>

</resources>
